optional to add a log file just for this thread

--- a/examples/getCpuUsage/CMakeLists.txt
+++ b/examples/getCpuUsage/CMakeLists.txt
@@ -27,6 +27,7 @@ SET (SOURCES
 SET (HEADERS
 )
 
+include_directories("${SPDLOG_INCLUDE_DIR}")
 include_directories(${GETCPUUSAGE_INCLUDE_DIR})
 
 add_executable(getCpuUsage ${SOURCES} ${HEADERS})
